<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    >
     <!-- 头像职务等上面部分 -->
    <LinearLayout 
          android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
     android:padding="5sp"
      android:layout_marginTop="5sp"
     android:background="@drawable/linearlayout_boder"
        >
         <ImageView
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/ic_photo_1"
         />

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        
	        android:paddingLeft="20sp" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	           android:text="@string/name_position"
	           android:id="@+id/setting_name_position"
	            android:textColor="@color/color_black"
	            android:textSize="16sp" />
	
	        <TextView
	            android:paddingTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/depart"
	            android:id="@+id/setting_depart"
	             android:textColor="@color/color_black"
	            android:textSize="16sp" />
	    </LinearLayout>
    </LinearLayout>
    
    <!-- 基本资料 -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:background="@drawable/linearlayout_boder"
            android:textColor="@color/color_black"
             android:textStyle="bold"
            android:padding="4sp"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="3sp"
             android:layout_marginLeft="50sp"
            android:textSize="18sp" />
     <View  android:layout_height="0.5sp" 
         	android:layout_marginLeft="130sp"
         	android:layout_marginTop="-20sp"
           android:layout_width="match_parent"
           android:background="#2c2e54"/>
    <View  android:layout_height="0.5sp" 
         	android:layout_marginLeft="5sp"
         	android:layout_marginRight="300sp"
           android:layout_width="match_parent"
           android:background="#2c2e54"/>
    
      <TextView
          android:layout_marginTop="25sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_name"
	            android:id="@+id/user_info_name"
	            android:textSize="17sp" />
    <!--   <TextView
          		android:layout_marginTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_sex"
	            android:textSize="17sp" /> -->
      <TextView
          android:layout_marginTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_id"
	            android:id="@+id/user_info_id"
	            android:textSize="17sp" />
      <TextView
          android:layout_marginTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_depart"
	             android:id="@+id/user_info_depart"
	            android:textSize="17sp" />
      <TextView
          android:layout_marginTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_position"
	             android:id="@+id/user_info_position"
	            android:textSize="17sp" />
      <TextView
          android:layout_marginTop="5sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_info_phone"
	             android:id="@+id/user_info_phone"
	            android:textSize="17sp" />
    
       <!-- 修改密码 -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_change_password"
            android:background="@drawable/linearlayout_boder"
            android:textColor="@color/color_black"
             android:textStyle="bold"
            android:padding="4sp"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="3sp"
             android:layout_marginLeft="50sp"
            android:textSize="18sp" />
     <View  android:layout_height="0.5sp" 
         	android:layout_marginLeft="130sp"
         	android:layout_marginTop="-20sp"
           android:layout_width="match_parent"
           android:background="#2c2e54"/>
    <View  android:layout_height="0.5sp" 
         	android:layout_marginLeft="5sp"
         	android:layout_marginRight="300sp"
           android:layout_width="match_parent"
           android:background="#2c2e54"/>
    <!-- 原密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        >
          <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_change_password_old"
	            android:textSize="20sp" />
          <EditText 
               android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/setting_old_pass"
	            android:inputType="textPassword"
	            android:textColorHint = "#707070"
	            android:hint="@string/user_change_password_old_hint"
              />
    </LinearLayout>
    <!-- 新密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
          <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_change_password_new"
	            android:textSize="20sp" />
          <EditText 
               android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	             android:inputType="textPassword"
	             android:id="@+id/setting_new_pass"
	             android:textColorHint = "#707070"
	            android:hint="@string/user_change_password_new_hint"
              />
    </LinearLayout>
    
    <Button 
        android:layout_marginLeft="80sp"
        android:layout_marginTop="8sp"
        android:layout_width="100sp"
        android:layout_height="30sp"
         android:textColor="@color/color_black"
         android:id="@+id/setting_change_pass"
	            android:background="@drawable/linearlayout_boder"
        android:text="@string/user_change_password_ok"
        />


</LinearLayout>